syntax = "proto3";

package email;

service EmailService{
  rpc sendLoginEmail (LoginEmailRequest) returns (LoginEmailResponse);
}

message LoginEmailRequest{
  string validationUrl = 1;
  string userName = 2;
  string email = 3;
}

message LoginEmailResponse{
  bool sent = 1;
}
